CSS update search Needs alignment, card needs alignment and fix flex

--- a/styles.css
+++ b/styles.css
@@ -17,14 +17,10 @@ section.input-section {
   display: flex;
   justify-content: center;
   align-items: center;
-  /*align-items: stretch;*/
-  /*padding: 1.5em 0 .1em 0;*/
 }
 
 form {
   display: flex;
-  /*display: flex;*/
-  /*justify-content: space-around;*/
   flex-direction: column;
   align-items: center;
   width:100%;
@@ -45,17 +41,24 @@ span {
 input {
   font-size: 2em;
   outline: none;
-  border: 2px solid lightgrey;
-  color: lightgrey;
+  border: 2px solid 6D6E71;
+  color: #939598;
   font-size: 2rem;
   width: 55%;
+}
+
+.input-title {
+  margin: 1.5rem;
+}
+
+.input-body {
+  margin: 1.5rem;
 }
 
 .save-button {
   background-color: #00A79D;
   font-size: 2rem;
-  font-color: lightgrey;
-  /*padding-bottom: .5rem;*/
+  font-color: 6D6E71;
   color: #FFFFFF;
   width: 55%;
 }
@@ -65,25 +68,42 @@ input {
 }
 
 
-
-/*Idea Styles Sara*/
-
-/*section {
-  display: wrap;
-  width: 100%;
-  justify-content: center;
-
-}
-
-section .idea-section {
-  font-family: 'Open Sans', sans-serif;
-  width: 50%;
-}
-
-.title-line-parent-container {
+section.idea-section {
+  background-color: #FFFFFF;
+  height: 65%;
   display: flex;
-  justify-content: space-between;
+  justify-content: flex-start;
+  flex-direction: column;
+  align-items: center;
+  padding: 2rem;
 }
+
+input.search {
+  font-size: 2em;
+  outline: none;
+  border: 2px solid 6D6E71;
+  color:  #939598;
+  font-size: 2rem;
+  width: 55%;
+  margin: 1.5rem;
+  /*Why is this different than above*/
+}
+
+ul {
+  list-style: none;
+  width: 55%;
+}
+
+li {
+ list-style-position: none;
+ border: solid magenta 2px;
+ width: 100%;
+}
+
+/*.title-line-parent-container {
+  display: flex;
+  align-items: flex-start;
+}*/
 
 h3 {
   color: #6D6E71;
@@ -93,15 +113,14 @@ p .idea-body {
   color: #939598;
 }
 
-.quality-line-parent-container {
+/*.quality-line-parent-container {
   display: flex;
   justify-content: flex-start;
   color: #6d6e71;
-}
+}*/
 
 br {
   color: #D1D3D4;
 }
 
 
-*/
